resources/minio-operator-http-proxy.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: minio-operator-httpproxy
  namespace: minio
spec:
  virtualhost:
    fqdn: minio.${DATA_E2E_BASE_URL}
    tls:
      passthrough: true
  tcpproxy:
    services:
    - name: minio-console
      port: 9001
