resources/minio-operator-http-proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: minio-operator-httpproxy
  namespace: minio
spec:
  virtualhost:
    fqdn: minio.tanzudatatap.ml
    tls:
      passthrough: true
  tcpproxy:
    services:
    - name: minio-console
      port: 9001
